--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -15,6 +15,7 @@
     "jotai": "^2.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
