--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,6 +105,11 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.sdist]
 sources = []
 
+# Things to exclude from the `.tar.gz`.
+exclude = [
+    "CNAME"
+]
+
 # Flatten folder structure for the `.whl`.
 [tool.hatch.build.targets.wheel]
 sources = ["src"]
