Build: update documentation formatting rules in `.prettierrc`

--- a/docs/.prettierrc
+++ b/docs/.prettierrc
@@ -4,5 +4,6 @@
     "trailingComma": "none",
     "singleQuote": false,
     "vueIndentScriptAndStyle": true,
-    "semi": true
+    "semi": true,
+    "bracketSpacing": true
 }
